# RAG

./: RAG.py  RAG_tourisme.ipynb  README.md  agent.py  conversational agent.ipynb  pyproject.toml  retrival.ipynb  utils.py
